2006-08-10  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h: Shuffle the namespacing
	  around a little to make code less verbose and clearer.

	* tests/testForest.cpp: Add tests to cover the new species code.

2006-08-10  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Plant.h:
	  First pass at re-implementing the forest code as a flexible
	  general case, rather than a quick hack.

2006-08-22  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number.

	* NEWS: Update news.

	* Release 0.2.5

2006-01-03  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, Mercator/iround.h, Mercator/GrassShader.cpp,
	  Mercator/Segment.cpp: Add macro for absolute value of floating
	  point numbers. Check for fabsf() and fall back to fabs() on non
	  C99 systems.

2005-12-02  James Turner  <james@worldforge.org>

	* Add X-Code 2.0 project file (ProjectBuilder project will be deleted
	  shortly).

2005-07-13  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/BasePoint.h: Re-order "const static" to "static const"
	  to eliminate some warnings.

2005-06-16  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number.

	* NEWS: Update news.

	* Releases 0.2.4

2005-06-14  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/DepthShader.cpp, Mercator/DepthShader.h,
	  Mercator/GrassShader.cpp, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h:
	  Move static variable definitions into the cpp files, as gcc 4
	  isn't happy otherwise.

2005-06-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment interface version.

	* NEWS: Update NEWS.

	* Release 0.2.3

2005-06-02  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/DepthShader.cpp, Mercator/DepthShader.h,
	  Mercator/GrassShader.cpp, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h:
	  Rename static variables that hold parameter key strings